Make sure we keep overflow: hidden on the #most-visited element when hidden.
Also, update the height of the lower section so that content does not
get clipped.

BUG=15234, 15106

TEST=Hide the thumbnails on the new new tab page. There should be no
way that clicking on some empty space would activate a hidden
.thumbnail For the second part of this bug close 5+ tabs and check that
the Recently closed section does not get clipped.

Review URL: http://codereview.chromium.org/146120

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@19199 0039d316-1c4b-4281-b951-d872f2087c98

--- a/chrome/browser/resources/new_new_tab.css
+++ b/chrome/browser/resources/new_new_tab.css
@@ -399,7 +399,7 @@ html[dir=rtl] .thumbnail-container .title div {
   border: 1px solid hsl(213, 65%, 92%);
   padding-bottom: 5px;
   overflow: hidden;
-  min-height: 175px;
+  min-height: 198px; /* height of 6 items plus the header */
   vertical-align: top;
   margin: 0;
 }
